Fix billpay docs broken hyperlinks and complaint response scenarios

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -17,7 +17,7 @@ For this, the core `fetch`, `pay` and `dispute` APIs are asynchronous. Each API 
 
 ### Fetch bill
 
-The <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest">Fetch bill API</a> with endpoint `/bbps/bills/fetch/request` is used to get bill details for a customer. You need to pass the details of the customer and also the business they want to fetch their bill from.
+The <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/path~/api/v2/bbps/bills/fetch/request/post">Fetch bill API</a> with endpoint `/bbps/bills/fetch/request` is used to get bill details for a customer. You need to pass the details of the customer and also the business they want to fetch their bill from.
 
 For e.g., if your customer wants to pay their phone bill for Vodafone Postpaid, you will need to provide—
 
@@ -275,13 +275,13 @@ In the response you either get the bill details, or "Processing" status if the b
 
 ### Pay bill
 
-The <a href="/payments/billpay/api-integration/api-reference#/category~Pay/operation~PaymentRequest" target="_blank">Pay bill API</a> is used to send details of a payment done by a user on your app/website to Setu. Setu uses this information to confirm a payment with the biller.
+The <a href="/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/request/post" target="_blank">Pay bill API</a> is used to send details of a payment done by a user on your app/website to Setu. Setu uses this information to confirm a payment with the biller.
 
 <hr class="primary" />
 
 ### Raise dispute
 
-The <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeRequest" target="_blank">Raise Dispute API</a> is used to Raise a compliant for a payment done by a user on your app/website to Setu. Setu uses this information and raises a compliant on the BBPS Platform.
+The <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/request/post" target="_blank">Raise Dispute API</a> is used to Raise a compliant for a payment done by a user on your app/website to Setu. Setu uses this information and raises a compliant on the BBPS Platform.
 
 <hr class="primary" />
 
@@ -324,7 +324,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
         >
             List disputes
         </a>
-        —lists all the raised disputes using the <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeRequest">Dispute API</a>.
+        —lists all the raised disputes using the <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/request/post">Dispute API</a>.
     </li>
 </ul>
 
