--- a/content/payments/billpay/api-integration/harmonization_of_tat.mdx
+++ b/content/payments/billpay/api-integration/harmonization_of_tat.mdx
@@ -17,7 +17,7 @@ This document details the enhancements made to the dispute APIs to incorporate t
 
 ### 1. Dispute Request API Updates
 
-The request api has been updated to include the new dispute types <a href='/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeRequest'> See API Reference </a>.
+The request api has been updated to include the new dispute types <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/request/post"> See API Reference </a>.
 
 #### Dispute Type Mappings
 
@@ -38,7 +38,7 @@ The following table shows how dispute types map to dispositions and ticket types
 
 ### 2. Dispute Response API Updates
 
-The response api has been updated to include the new status values and fields <a href='/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeResponse'> See API Reference </a>.
+The response api has been updated to include the new status values and fields <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/response/post"> See API Reference </a>.
 
 
 #### New Status Values
