--- a/content/payments/billpay/api-integration/plan-mdm-integration.mdx
+++ b/content/payments/billpay/api-integration/plan-mdm-integration.mdx
@@ -324,9 +324,12 @@ POST /api/v2/bbps/bills/fetch/request
 }
 `}</CodeBlockWithCopy>
 
-> **Note:** If a biller uses a different parameter name for plan ID, check that biller's specification from List Billers API.
+<Callout type="tip">
+<b>Note:</b> If a biller uses a different parameter name for plan ID, check that biller's specification from List Billers API.
+</Callout>
+<br />
 
-<Text size="small">**V1 users:** Use <Code>customer.billParameters</Code> instead of <Code>customer.customerParams</Code>.</Text>
+**V1 users:** Use `customer.billParameters` instead of `customer.customerParams`.
 
 **Complete Request Example:**
 
@@ -495,7 +498,10 @@ Process payment for validated plans using the reference ID from validation.
 </Card>
 <br />
 
-> **💰 Amount Format:** All amounts must be specified in **paise** (1 Rupee = 100 paise) and must match the selected plan's amount exactly.
+<Callout type="tip">
+ <b>💰 Amount Format:</b> All amounts must be specified in <b>paise</b> (1 Rupee = 100 paise) and must match the selected plan's amount exactly.
+</Callout>
+<br />
 
 **Response:**
 
