--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -43,9 +43,9 @@ Each of these steps are described in detail below.
 
 ### Step 1 — Get your API keys
 
-You have to use `X-PARTNER-ID` in the auth header and `clientID` and `secret` as the bearer token. Get these values by reaching out to the Setu team at <a href="">onboarding@setu.co</a>.
+You have to use `X-PARTNER-ID` in the auth header and `clientID` and `secret` as the bearer token. Get these values by reaching out to the Setu team at <a href="mailto:onboarding@setu.co">onboarding@setu.co</a>.
 
-Once you have the credentials, get the token by making a `POST` request to `https://sandbox-coudc.setu.co/api/v1/auth/token`.
+Once you have the credentials, get the token by making a `POST` request to `https://sandbox-coudc.setu.co/api/v2/auth/token`.
 
 <CodeBlockWithCopy language="json">{`
 {
@@ -77,7 +77,7 @@ To reiterate, an agent is an entity on BBPS, that enables its customers to pay a
 
 ###### Share business details
 
-Reach out to <a href="">onboarding@setu.co</a> to get a list of business details you need to provide to set up your BBPS agent ID(s).
+Reach out to <a href="mailto:onboarding@setu.co">onboarding@setu.co</a> to get a list of business details you need to provide to set up your BBPS agent ID(s).
 
 ###### Share callback URL
 
