--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -68,7 +68,7 @@ This document provides comprehensive information on:
 A UPMS registration represents an end-customer's mandate with a UPMS enabled biller for automatic bill presentment via your app. A successful registration authorizes the biller (with customer consent) to push bill details for that customer through BBPS to us, and subsequently, to you via callbacks.
 
 <Callout type="warning">
-<b>UPMS is only available for billers who have the <code>upmsEnabled</code> flag set to <code>true</code>.</b> You can check this flag using the <a href="/payments/billpay/api-integration/api-reference#/category~List/operation~getBillers">List billers API</a>, which also allows filtering by this flag. Trying to create a UPMS registration for billers without <code>upmsEnabled</code> set to <code>true</code> will fail.
+<b>UPMS is only available for billers who have the <code>upmsEnabled</code> flag set to <code>true</code>.</b> You can check this flag using the <a href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/billers/get">List billers API</a>, which also allows filtering by this flag. Trying to create a UPMS registration for billers without <code>upmsEnabled</code> set to <code>true</code> will fail.
 </Callout>
 
 ### 2.2 Registration Lifecycle
@@ -127,7 +127,7 @@ You must set up and provide us with a secure HTTPS webhook endpoint URL. This en
 
 This process leverages the existing **Bill Fetch API** endpoint. To initiate a UPMS registration alongside fetching the current bill (if available), you simply include the `mandate` object in the standard Bill Fetch request.
 
-**Endpoint:** `POST /api/v2/bbps/bills/fetch/request` <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest">(See API Reference)</a>
+**Endpoint:** `POST /api/v2/bbps/bills/fetch/request` <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/path~/api/v2/bbps/bills/fetch/request/post">(See API Reference)</a>
 
 **Type:** Asynchronous
 
@@ -1096,7 +1096,7 @@ Note the presence of `upmsRegistrationRefId` indicating this is for a registered
 
 When a user opts to pay a presented bill:
 
-1. **Invoke Payment API**: Construct and send a request to our BBPS Payment API endpoint. (<a href="/payments/billpay/api-integration/api-reference#/category~Pay/operation~PaymentRequest">See API Reference</a>)
+1. **Invoke Payment API**: Construct and send a request to our BBPS Payment API endpoint. (<a href="/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/request/post">See API Reference</a>)
 2. **Follow Payment Flow**: Handle the response and subsequent steps (e.g., status checks, notifications) as defined in the Payment API documentation.
 
 ## 6. Handling Skipped Payments
