--- a/content/payments/billpay/api-integration/v2-migration.mdx
+++ b/content/payments/billpay/api-integration/v2-migration.mdx
@@ -11,7 +11,7 @@ The changes below will help you plan your migration from v1 to v2 specs.
 
 ### Bill Fetch Request
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/path~/api/v2/bbps/bills/fetch/request/post" target="_blank">API</a>
 
 | Type | Old                       | New                       |
 | ---- | ------------------------- | ------------------------- |
@@ -49,7 +49,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ### Bill Fetch Response
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/path~/api/v2/bbps/bills/fetch/response/post" target="_blank">API</a>
 
 | Type | Old                  | New            |
 | ---- | -------------------- | -------------- |
@@ -92,7 +92,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ### Bill Pay Request
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Pay/operation~PaymentRequest" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/request/post" target="_blank">API</a>
 
 | Type | Old                       | New                       |
 | ---- | ------------------------- | ------------------------- |
@@ -156,7 +156,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ### Bill Pay response
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Pay/operation~PaymentResponse" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/response/post" target="_blank">API</a>
 
 | Type | Old                 | New |
 | ---- | ------------------- | --- |
@@ -192,7 +192,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ### Bill Dispute request
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeRequest" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/request/post" target="_blank">API</a>
 
 | Type | Old              | New             |
 | ---- | ---------------- | --------------- |
@@ -282,7 +282,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ## List Disputes
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~List/operation~getDisputesV2" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/disputes/get" target="_blank">API</a>
 
 | Type            | Old                    | New             |
 | --------------- | ---------------------- | --------------- |
@@ -328,7 +328,7 @@ Following changes were made to this <a href="/payments/billpay/api-integration/a
 
 ### List transactions
 
-Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~List/operation~getTxnsV2" target="_blank">API</a>
+Following changes were made to this <a href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/transactions/get" target="_blank">API</a>
 
 | Type | Old                    | New            |
 | ---- | ---------------------- | -------------- |
