change error message

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -672,7 +672,7 @@ Below are the parameter tables and sample payloads for the listed events. Note t
     "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831",
     "error": {
         "code": "insufficient-balance",
-        "message": "Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.",
+        "message": "The account does not have enough funds to initiate this payment",
         "type": "FUND_TRANSFER"
     }
 }`}
@@ -826,7 +826,7 @@ Below are the parameter tables and sample payloads for the listed events. Note t
                 <td>error</td>
                 <td>Object</td>
                 <td>Error details for failure of bill payment</td>
-                <td><code>[&#123;&quot;code&quot;: &quot;insufficient-balance&quot;, &quot;message&quot;: &quot;66578Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.01290&quot;, &quot;type&quot;: &quot;FUND_TRANSFER&quot;]</code></td>
+                <td><code>[&#123;&quot;code&quot;: &quot;insufficient-balance&quot;, &quot;message&quot;: &quot;66578The account does not have enough funds to initiate this payment01290&quot;, &quot;type&quot;: &quot;FUND_TRANSFER&quot;]</code></td>
             </tr>
         </table>
     </details>
