fix(docs): correct billNumber in multi-bill-processing guide

--- a/content/payments/billpay/api-integration/paying-bills/multi-bill-processing.mdx
+++ b/content/payments/billpay/api-integration/paying-bills/multi-bill-processing.mdx
@@ -44,7 +44,7 @@ if (fetchResponse.data.billerResponseType === "LIST") {
     "billerResponseType": "LIST",
     "billerSelectionType": "MULTIPLE",
     "bills": [
-      { "billNumber": "BILL_00payments/billpay/1", "amount": 50000 },
+      { "billNumber": "BILL_001", "amount": 50000 },
       { "billNumber": "BILL_002", "amount": 75000 }
     ]
   }
