--- a/content/payments/billpay/api-integration/paying-bills/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/paying-bills/remittance_flows_guide.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Passing Remitter Details
+sidebar_title: Remitter Details
 page_title: Passing Remitter Details
 order: 2
 visible_in_sidebar: true
