docs: Fix overflow issue by updating bill payment titles

--- a/content/payments/billpay/api-integration/paying-bills/multi-bill-processing.mdx
+++ b/content/payments/billpay/api-integration/paying-bills/multi-bill-processing.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Paying for multiple bills
+sidebar_title: Paying multiple bills
 page_title: Paying for multiple bills
 order: 5
 visible_in_sidebar: true
