added hyperlink to refer prepaid recharge in paying bills quickstart_first_paragraph

--- a/content/payments/billpay/api-integration/paying-bills/quickstart.mdx
+++ b/content/payments/billpay/api-integration/paying-bills/quickstart.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 # Paying Bills
 
-**Scope**: This guide covers using Setu APIs to pay bills through the BBPS (Bharat Bill Payment System) network. For prepaid mobile recharge, refer to the separate prepaid recharge API documentation.
+**Scope**: This guide covers using Setu APIs to pay bills through the BBPS (Bharat Bill Payment System) network. For prepaid mobile recharge, refer to the separate <a href="/payments/billpay/mobile-prepaid-recharge">prepaid recharge API documentation</a>.
 
 <Callout type="tip">
   This guide works for both v1 and v2 APIs. Key differences:
