Fix typo in settings documentation

--- a/content/dev-tools/bridge/settings.mdx
+++ b/content/dev-tools/bridge/settings.mdx
@@ -11,7 +11,7 @@ visible_in_sidebar: true
 You can customise details provided for the organisation, and also check details attached to the organisation. There are 3 primary sections under Settings:
 
 <ol>
-    <li>Account prefreces</li>
+    <li>Account preferences</li>
     <li>API credentials</li>
     <li>Users</li>
 </ol>
