--- a/content/payments/billpay/api-integration/webhooks.mdx
+++ b/content/payments/billpay/api-integration/webhooks.mdx
@@ -256,7 +256,7 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
     "event": "BILL_PAY",
     "data": {
         "refId": "D4FBHNBFTPVUIF7U2L30zNfa44153241214",
-        "status": "Credit_Adjustment",
+        "status": "CREDIT ADJUSTMENT",
         "billerRefId": "AB123456",
         "transactionId": "AS015324121535B9bN8t",
         "paymentDetails": {
