Add callouts to webhooks page

--- a/content/payments/billpay/mobile-prepaid-recharge/webhooks.mdx
+++ b/content/payments/billpay/mobile-prepaid-recharge/webhooks.mdx
@@ -27,6 +27,10 @@ You need to do the following to configure a Setu provided webhook—
 
 To configure webhooks, share your webhook URL with Setu via email to <a href="mailto:support@setu.co">support@setu.co</a>.
 
+<Callout type="warning">
+    We expect a single base URL for all webhooks and we will append the specific endpoints to the base URL based on the event type.
+</Callout>
+
 <hr class="primary" />
 
 
@@ -336,6 +340,8 @@ The system implements automatic retry mechanisms for webhook delivery with diffe
 - Attempt 5: After 16 seconds (8 × 2)
 - Attempt 6: After 32 seconds (16 × 2, capped at 2 minutes max)
 
-After all retries are exhausted, the webhook status is marked as "FAILED" in the system.
+<Callout type="warning">
+    After all retries are exhausted, the webhook status is marked as "FAILED" in the system.
+</Callout>
 
 <WasPageHelpful />
