Update amount in webhooks

--- a/content/payments/billpay/mobile-prepaid-recharge/webhooks.mdx
+++ b/content/payments/billpay/mobile-prepaid-recharge/webhooks.mdx
@@ -62,7 +62,7 @@ The system appends specific routes to your base `webhook_url` based on the event
 | `trace_id` | string | System reference number (internal trace ID) | Yes |
 | `operatorRefId` | string | Operator transaction ID (if available) | No |
 | `status` | string | Transaction status - one of: `"Successful"`, `"Processing"`, `"Failure"` | Yes |
-| `amount` | string | Recharge amount | Yes |
+| `amount` | string | Recharge amount (in rupees) | Yes |
 | `mobile_number` | string | Mobile number that was recharged | Yes |
 | `provider` | string | Service provider name | Yes |
 | `failureReason` | string | Reason for failure (only present when status is "Failure") | No |
@@ -145,7 +145,7 @@ The system appends specific routes to your base `webhook_url` based on the event
 | `trace_id` | string | System reference number (internal trace ID) | Yes |
 | `operatorRefId` | string | Operator transaction ID (if available) | No |
 | `status` | string | Transaction status - `"REVERSED"` | Yes |
-| `amount` | string | Recharge amount | Yes |
+| `amount` | string | Recharge amount (in rupees) | Yes |
 | `mobile_number` | string | Mobile number that was recharged | Yes |
 | `provider` | string | Service provider name | Yes |
 | `failureReason` | string | Reason for reversal (if provided by operator) | No |
@@ -197,7 +197,7 @@ The system appends specific routes to your base `webhook_url` based on the event
 | Field | Type | Description | Mandatory? |
 |-------|------|-------------|------------|
 | `event` | string | Always `"wallet.low_balance"` for this webhook type | Yes |
-| `balance` | string | Current wallet balance amount | Yes |
+| `balance` | string | Current wallet balance amount (in rupees) | Yes |
 | `message` | string | Alert message (typically "Low balance Alert") | Yes |
 | `timestamp` | string | ISO 8601 formatted timestamp (UTC) | Yes |
 | `traceId` | string | Unique trace ID for this notification | Yes |
@@ -247,13 +247,13 @@ The system appends specific routes to your base `webhook_url` based on the event
 | Field | Type | Description | Mandatory? |
 |-------|------|-------------|------------|
 | `event` | string | Always `"wallet.credit"` for this webhook type | Yes |
-| `amount` | string | Top-up amount credited to wallet | Yes |
+| `amount` | string | Top-up amount credited to wallet (in rupees) | Yes |
 | `referenceNumber` | string | User reference number for the top-up transaction (may be empty string) | No |
 | `creditedFrom` | string | Source of the credit (e.g., "Bank Transfer", may be empty string) | No |
 | `transactionDate` | string | ISO 8601 formatted timestamp of the transaction | Yes |
 | `message` | string | Transaction message (defaults to "Credit Successful" if not provided) | No |
 | `traceId` | string | Unique trace ID for this notification | Yes |
-| `currentBalance` | string | Current wallet balance after the top-up | Yes |
+| `currentBalance` | string | Current wallet balance after the top-up (in rupees) | Yes |
 
 <Card padding="nano" shape="rounded">
     <details>
