--- a/content/payments/billpay/api-integration/webhooks.mdx
+++ b/content/payments/billpay/api-integration/webhooks.mdx
@@ -141,7 +141,7 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
     "event": "BILL_PAY",
     "data": {
         "refId": "HENSVVR4QOS7X1UGPY7JGUV444P10102202",
-        "status": "SUCCESS",
+        "status": "Success",
         "billerRefId": "ABC1235",
         "transactionId": "AX01122999900001",
         "paymentDetails": {
@@ -169,7 +169,7 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
     "event": "BILL_PAY",
     "data": {
         "refId": "HENSVVR4QOS7X1UGPY7JGUV444P10102202",
-        "status": "FAILURE",
+        "status": "Failure",
         "billerRefId": "ABC1235",
         "transactionId": "AX01122999900001",
         "failureReason": {
@@ -201,7 +201,7 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
     "event": "BILL_PAY",
     "data": {
         "refId": "D4FBHNBFTPVUIF7U2L30zNfa44153241214",
-        "status": "CREDIT ADJUSTMENT",
+        "status": "Credit_Adjustment",
         "billerRefId": "AB123456",
         "transactionId": "AS015324121535B9bN8t",
         "paymentDetails": {
