--- a/content/payments/billpay/mcp/integration-guide.mdx
+++ b/content/payments/billpay/mcp/integration-guide.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## MCP for Bill Payments integration guide
+## MCP for Bill Payments - Integration guide
 
 Currently live on ChatGPT and Claude, as other LLM providers don't allow for custom connectors. All bill payments require a phone number/OTP to fetch bills.
 
@@ -124,8 +124,8 @@ You are ready!
      <li>Make bill payments while coding.</li>
      <li>Make agents that can use the <i>Setu Bill Payments MCP</i>.</li>
      <li>For code level agents go to Get Started - <a href="https://billpay-mcp.setu.co/login" target="_blank" rel="noreferrer">Setu Bill Payments</a>.</li>
-      <li>Generate token using a mobile number.<br/><img src="/assets/payments/billpay/mcp/image-20251126-103200.png" alt="OTP verification"/></li>
-      <li>Use token fetch API to get token.<br/><img src="/assets/payments/billpay/mcp/image-20251126-103532.png" alt="Token fetch"/></li>
+      <li>Generate token using a mobile number.<br/>![OTP verification](/assets/payments/billpay/mcp/image-20251126-103200.png)</li>
+      <li>Use token fetch API to get token.<br/>![Token fetch](/assets/payments/billpay/mcp/image-20251126-103532.png)</li>
       <li>Use this token to call the /mcp endpoints for tools and no need to implement OAuth user redirect implementation.</li>
    </ol>
 
