Remove mailTo anchor tag

--- a/content/dev-tools/bridge/glossary.mdx
+++ b/content/dev-tools/bridge/glossary.mdx
@@ -15,7 +15,7 @@ This is any organisation using the Bridge, and will always be one of the followi
 |:-------|:------------------------------------------------------------------------|
 | **Parent Bridge account**  | When you sign up on the Bridge, you provide an organisation name and create an account against it—this becomes the parent account within which you can integrate with multiple Setu products.                               |
 | **Child sub-org account** | Child sub-org accounts always belong to a parent organisation’s account. When you want to use any product, such as KYC, eNACH, Account Aggregator, or UPI Setu, you need to set up a child sub-org account that contains details for: <br/> <br/> 1. Your organisation, either reused from sign-up or a relevant subsidiary, for which KYC will be done. <br/><br/>  2. The product category you want to use. <br/> <br/> Here are a few examples:  <br/> <br/> • **Account Aggregator FIUs (Financial Information Users):** In the AA ecosystem, entities using financial information, such as personal finance apps or loan providers. <br/> <br/> • **UPI merchants:** In the UPI ecosystem, entities collecting payments through UPI. <br/> <br/> • **BBPS BOU billers:** Entities collecting repeat payments for their services via BBPS-enabled apps. <br/> <br/> • **BBPS COU agents:**Entities offering BBPS-enabled platforms to collect bill payments for BBPS billers. |
-| **Aggregator account (coming soon)** | This is a type of parent Bridge account, that is allowed to resell Setu products to its business customers. The Bridge allows additional features for an aggregator—like viewing combined reports and analytics for all their business customers, or managing their corresponding Parent Bridge accounts with a single login. <br/><br/> If you want to become an aggregator, please contact <a href="mailto:onboarding@setu.co">onboarding@setu.co</a> for more details.|
+| **Aggregator account (coming soon)** | This is a type of parent Bridge account, that is allowed to resell Setu products to its business customers. The Bridge allows additional features for an aggregator—like viewing combined reports and analytics for all their business customers, or managing their corresponding Parent Bridge accounts with a single login. <br/><br/> If you want to become an aggregator, please contact [onboarding@setu.co](mailto:onboarding@setu.co) for more details.|
 
 <img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Glossary/Organisation%20hierarchy.png" alt="" />
 
