--- a/content/payments/billpay/mcp/integration-guide.mdx
+++ b/content/payments/billpay/mcp/integration-guide.mdx
@@ -124,8 +124,10 @@ You are ready!
      <li>Make bill payments while coding.</li>
      <li>Make agents that can use the <i>Setu Bill Payments MCP</i>.</li>
      <li>For code level agents go to Get Started - <a href="https://billpay-mcp.setu.co/login" target="_blank" rel="noreferrer">Setu Bill Payments</a>.</li>
-      <li>Generate token using a mobile number.<br/>![OTP verification](/assets/payments/billpay/mcp/image-20251126-103200.png)</li>
-      <li>Use token fetch API to get token.<br/>![Token fetch](/assets/payments/billpay/mcp/image-20251126-103532.png)</li>
+       <li>Generate token using a mobile number.
+      <MainImage src="https://storage.googleapis.com/strapi-assets/latest/MCP_for_bill_payment/cursor-authentication.png" alt="Cursor Authentication successful" /></li>
+      <li>Use token fetch API to get token.</li>
+      <MainImage src="https://storage.googleapis.com/strapi-assets/latest/MCP_for_bill_payment/cursor-token-fetch.png" alt="Cursor Token Fetch"/>
       <li>Use this token to call the /mcp endpoints for tools and no need to implement OAuth user redirect implementation.</li>
    </ol>
 
