--- a/content/payments/billpay/api-integration/harmonization_of_tat.mdx
+++ b/content/payments/billpay/api-integration/harmonization_of_tat.mdx
@@ -53,7 +53,7 @@ The `ComplaintStatus` enum has been updated with the following values:
 | `DEFAULT_RESOLVED` | Dispute automatically resolved due to timeout or default process in favout of customer |
 | `REFUNDED` | Refund successfully processed and completed |
 | `PENDING_REFUND` | Refund approved and currently being processed |
-| `FAILED` | Dispute failed to be raised with NPCI due to technical or network errors |
+| `FAILED` | The dispute could not be raised with NPCI due to technical or network issues |
 
 #### New Response Fields
 
